@@ -1,0 +1,46 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.apache.gora.util;
+
+import java.io.IOException;
+
+/**
+ * Gora specific exception. This extends IOException, since 
+ * most of what Gora does is I/O related.
+ */
+public class GoraException extends IOException {
+
+  private static final long serialVersionUID = -3889679982234557828L;
+
+  public GoraException() {
+    super();
+  }
+
+  public GoraException(String message, Throwable cause) {
+    super(message, cause);
+  }
+
+  public GoraException(String message) {
+    super(message);
+  }
+
+  public GoraException(Throwable cause) {
+    super(cause);
+  }
+}
